fix(Swagger): Penyesuaian dokumentasi swagger
